# CMAKE_TEMPLATE_FOR_AVR

./: CMakeLists.txt  LICENCE  README.md
src/: main.c
